modify feature household
